Text fields in datablocks editor are broken #39692

Closed
opened 2014-04-12 21:06:16 +02:00 by Sv. Lockal · 12 comments
Member

System Information
Ubuntu 14.04.

Blender Version
Broken: 2.70 f7d06cdb6b
Worked: 2.69 release

Short description of error
Fields (buttons) with editable text and dropdown buttons in datablocks editor are broken in 2.70. Some of them can not be edited, some of them lead to crash.

Exact steps for others to reproduce the error

  • Switch outliner to datablocks editor.
  • Expand Cameras -> Camera
  • Try to edit Name -- fields like this are uneditable in datablocks UI (were editable in 2.69).
  • Look at Type, Composition Guides and Sensor Fit dropdowns -- no text is these fields. Try to set them -- still no text.
  • Scroll down and single click Dof Object field -- the list of objects is empty.
  • Double click Dof Object field -- blender will assert at string.c:117, BLI_strncpy(), at 'maxncpy != 0' and crash.
**System Information** Ubuntu 14.04. **Blender Version** Broken: 2.70 f7d06cdb6b Worked: 2.69 release **Short description of error** Fields (buttons) with editable text and dropdown buttons in datablocks editor are broken in 2.70. Some of them can not be edited, some of them lead to crash. **Exact steps for others to reproduce the error** - Switch outliner to datablocks editor. - Expand Cameras -> Camera - Try to edit Name -- fields like this are uneditable in datablocks UI (were editable in 2.69). - Look at Type, Composition Guides and Sensor Fit dropdowns -- no text is these fields. Try to set them -- still no text. - Scroll down and single click Dof Object field -- the list of objects is empty. - Double click Dof Object field -- blender will assert at `string.c:117, BLI_strncpy(), at 'maxncpy != 0'` and crash.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Lockal

Added subscriber: @Lockal

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I cannot confirm the assert here but the other points are valid.

I cannot confirm the assert here but the other points are valid.
Author
Member

I forgot to mention that this assert is visible only with debug builds. Asan crashlog: strcpy_crash_parsed.txt

I forgot to mention that this assert is visible only with debug builds. Asan crashlog: [strcpy_crash_parsed.txt](https://archive.blender.org/developer/F84681/strcpy_crash_parsed.txt)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note, I dont think its correct to resolve in ui_textedit_set_cursor_pos, probably this button should be made to work like the one in the camera buttons window.

Note, I dont think its correct to resolve in `ui_textedit_set_cursor_pos`, probably this button should be made to work like the one in the camera buttons window.
Author
Member

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-04-27 20:35:56 +02:00

This issue was referenced by blender/blender-addons-contrib@f328f45e22

This issue was referenced by blender/blender-addons-contrib@f328f45e22abafbb4eb88fc441c9b3707624901f

This issue was referenced by f328f45e22

This issue was referenced by f328f45e22abafbb4eb88fc441c9b3707624901f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f328f45e22.

Closed by commit f328f45e22.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39692
No description provided.