Fix part of T39692: Text fields in datablocks editor are broken

Text field part. Issue with enums dropdowns remains a mystery currently.

As for pointer fields, afaict they have never worked here, though it should
not crash.

UI_EMBOSS are values, not bitflags (own fault, most likely)...

Note we should probably get rid of UI_EMBOSST, it is used nowhere in UI code (set
in one place only, used nowhere).